# rust-demo

./: .env  Cargo.toml  README.md
resource/: data.sql  immigration.sql
src/: kube_cli.rs  lib.rs  main.rs  mysql.rs
src/api/: router.rs
src/controller/: router.rs
src/dao/: log_db.rs  user_db.rs
src/entity/: common.rs  kube_req.rs  log.rs  user.rs
src/kube/: kube_opt.rs
src/service/: auth.rs
