[package]
name = "helloworld"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.2"
tokio = { version = "1.0", features = ["full"] }
sqlx = { version = "0.5", features = ["runtime-tokio-native-tls", "mysql","chrono"] }
mysql_async = "0.24"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.9"
dotenv = "0.15.0"
once_cell = "1.8.0"
chrono = { version = "0.4", features = ["serde"] }
kube = { version = "0.86.0", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.20.0", features = ["v1_28"] }